Ensure links have enough contrast

--- a/theme/base/stylesheets/pages/front-page/modules/footer.scss
+++ b/theme/base/stylesheets/pages/front-page/modules/footer.scss
@@ -27,7 +27,7 @@
         }
 
         a {
-            color: $blue;
+            color: $contrastBlue;
         }
 
         li.nav-row {
